codex-agent-runtime-desktop/native/c-api/include/codex_agent.h

typedef int32_t codex_agent_status_t;
typedef struct codex_agent_context codex_agent_context_t;
typedef struct codex_agent_invocation_plugin codex_agent_invocation_plugin_t;
typedef struct codex_agent_invocation_skill codex_agent_invocation_skill_t;
typedef struct codex_agent_invocation codex_agent_invocation_t;
typedef struct codex_agent_message codex_agent_message_t;
typedef struct codex_agent_turn_request codex_agent_turn_request_t;
typedef int32_t codex_agent_approval_preset_t;
typedef int32_t codex_agent_capability_t;
typedef int32_t codex_agent_collaboration_mode_t;
typedef int32_t codex_agent_invocation_kind_t;
typedef int32_t codex_agent_message_role_t;
typedef struct codex_agent_string_view {
    const uint8_t *data;
    size_t size;
} codex_agent_string_view_t;
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_invocation_plugin_create(
    codex_agent_context_t *context,
    const codex_agent_string_view_t *name,
    const codex_agent_string_view_t *uri,
    codex_agent_invocation_plugin_t **out_plugin);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_invocation_plugin_destroy(
    codex_agent_context_t *context,
    codex_agent_invocation_plugin_t **plugin);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_invocation_plugin_name_copy(
    codex_agent_context_t *context,
    codex_agent_invocation_plugin_t *plugin,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_invocation_plugin_uri_copy(
    codex_agent_context_t *context,
    codex_agent_invocation_plugin_t *plugin,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_invocation_skill_create(
    codex_agent_context_t *context,
    const codex_agent_string_view_t *name,
    const codex_agent_string_view_t *path,
    codex_agent_invocation_skill_t **out_skill);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_invocation_skill_destroy(
    codex_agent_context_t *context,
    codex_agent_invocation_skill_t **skill);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_invocation_skill_name_copy(
    codex_agent_context_t *context,
    codex_agent_invocation_skill_t *skill,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_invocation_skill_path_copy(
    codex_agent_context_t *context,
    codex_agent_invocation_skill_t *skill,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_invocation_from_plugin(
    codex_agent_context_t *context,
    codex_agent_invocation_plugin_t *plugin,
    codex_agent_invocation_t **out_invocation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_invocation_from_skill(
    codex_agent_context_t *context,
    codex_agent_invocation_skill_t *skill,
    codex_agent_invocation_t **out_invocation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_invocation_destroy(
    codex_agent_context_t *context,
    codex_agent_invocation_t **invocation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_invocation_kind(
    codex_agent_context_t *context,
    codex_agent_invocation_t *invocation,
    codex_agent_invocation_kind_t *out_kind);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_invocation_plugin(
    codex_agent_context_t *context,
    codex_agent_invocation_t *invocation,
    codex_agent_invocation_plugin_t **out_plugin);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_invocation_skill(
    codex_agent_context_t *context,
    codex_agent_invocation_t *invocation,
    codex_agent_invocation_skill_t **out_skill);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_destroy(
    codex_agent_context_t *context,
    codex_agent_message_t **message);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_id_copy(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_has_client_message_id(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    int32_t *out_has_client_message_id);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_client_message_id_copy(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_role(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    codex_agent_message_role_t *out_role);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_text_copy(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_collaboration_mode(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    codex_agent_collaboration_mode_t *out_mode);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_has_reasoning(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    int32_t *out_has_reasoning);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_reasoning_copy(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_has_plan(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    int32_t *out_has_plan);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_plan_copy(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_has_shell_command(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    int32_t *out_has_shell_command);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_shell_command_copy(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_exit_code(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    int32_t *out_has_exit_code,
    int32_t *out_exit_code);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_capabilities_count(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_has_capability(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    codex_agent_capability_t capability,
    int32_t *out_has_capability);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_invocations_count(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_message_invocation_at(
    codex_agent_context_t *context,
    codex_agent_message_t *message,
    size_t index,
    codex_agent_invocation_t **out_invocation);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_turn_request_create(
    codex_agent_context_t *context,
    const codex_agent_string_view_t *prompt,
    int32_t has_client_message_id,
    const codex_agent_string_view_t *client_message_id,
    int32_t has_model,
    const codex_agent_string_view_t *model,
    int32_t has_effort,
    const codex_agent_string_view_t *effort,
    int32_t has_service_tier,
    const codex_agent_string_view_t *service_tier,
    codex_agent_approval_preset_t approval_preset,
    const codex_agent_capability_t *capabilities,
    size_t capability_count,
    codex_agent_invocation_t *const *invocations,
    size_t invocation_count,
    codex_agent_collaboration_mode_t collaboration_mode,
    codex_agent_turn_request_t **out_request);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_turn_request_destroy(
    codex_agent_context_t *context,
    codex_agent_turn_request_t **request);