codex-agent-bindings/csharp/src/CodexAgent/Interop/NativeConversationMethods.cs


    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_destroy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageDestroy(nint context, ref nint message);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_id_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageIdCopy(nint context, nint message, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_has_client_message_id")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageHasClientMessageId(nint context, nint message, out int present);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_client_message_id_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageClientMessageIdCopy(nint context, nint message, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_role")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageRole(nint context, nint message, out CodexMessageRole role);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_text_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageTextCopy(nint context, nint message, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_collaboration_mode")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageCollaborationMode(nint context, nint message, out CodexCollaborationMode mode);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_has_reasoning")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageHasReasoning(nint context, nint message, out int present);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_reasoning_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageReasoningCopy(nint context, nint message, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_has_plan")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageHasPlan(nint context, nint message, out int present);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_plan_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessagePlanCopy(nint context, nint message, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_has_shell_command")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageHasShellCommand(nint context, nint message, out int present);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_shell_command_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageShellCommandCopy(nint context, nint message, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_exit_code")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageExitCode(nint context, nint message, out int present, out int value);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_capabilities_count")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageCapabilitiesCount(nint context, nint message, out nuint count);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_has_capability")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageHasCapability(nint context, nint message, CodexCapability capability, out int present);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_invocations_count")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageInvocationsCount(nint context, nint message, out nuint count);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_message_invocation_at")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus MessageInvocationAt(nint context, nint message, nuint index, out nint invocation);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_invocation_destroy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InvocationDestroy(nint context, ref nint invocation);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_invocation_kind")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InvocationKind(nint context, nint invocation, out int kind);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_invocation_plugin")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InvocationPlugin(nint context, nint invocation, out nint plugin);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_invocation_skill")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InvocationSkill(nint context, nint invocation, out nint skill);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_invocation_plugin_create")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InvocationPluginCreate(nint context, NativeStringView* name, NativeStringView* uri, out nint plugin);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_invocation_plugin_destroy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InvocationPluginDestroy(nint context, ref nint plugin);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_invocation_plugin_name_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InvocationPluginNameCopy(nint context, nint plugin, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_invocation_plugin_uri_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InvocationPluginUriCopy(nint context, nint plugin, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_invocation_skill_create")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InvocationSkillCreate(nint context, NativeStringView* name, NativeStringView* path, out nint skill);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_invocation_skill_destroy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InvocationSkillDestroy(nint context, ref nint skill);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_invocation_skill_name_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InvocationSkillNameCopy(nint context, nint skill, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_invocation_skill_path_copy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InvocationSkillPathCopy(nint context, nint skill, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_invocation_from_plugin")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InvocationFromPlugin(nint context, nint plugin, out nint invocation);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_invocation_from_skill")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus InvocationFromSkill(nint context, nint skill, out nint invocation);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_turn_request_create")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus TurnRequestCreate(
        nint context, NativeStringView* prompt,
        int hasClientMessageId, NativeStringView* clientMessageId,
        int hasModel, NativeStringView* model,
        int hasEffort, NativeStringView* effort,
        int hasServiceTier, NativeStringView* serviceTier,
        CodexApprovalPreset approvalPreset,
        CodexCapability* capabilities, nuint capabilityCount,
        nint* invocations, nuint invocationCount,
        CodexCollaborationMode collaborationMode,
        out nint request);
    [LibraryImport(LibraryName, EntryPoint = "codex_agent_turn_request_destroy")][UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus TurnRequestDestroy(nint context, ref nint request);
